[gd_scene load_steps=11 format=3 uid="uid://ntdu7ipba0tq"]

[ext_resource type="PackedScene" uid="uid://b1dc6qfcetq0h" path="res://Scenes/paddle.tscn" id="1_ifoo7"]
[ext_resource type="Script" path="res://Scripts/level.gd" id="1_iqk4o"]
[ext_resource type="PackedScene" uid="uid://c7l4m5lk6i7jn" path="res://Scenes/ball.tscn" id="2_q414a"]
[ext_resource type="Texture2D" uid="uid://oeop7pfe4vfn" path="res://Assets/60-Breakout-Tiles.png" id="4_rrchu"]
[ext_resource type="PackedScene" uid="uid://b2vt7f768o0s0" path="res://Scenes/tri_ball_pwr.tscn" id="5_bfu2y"]
[ext_resource type="PackedScene" uid="uid://cx5koi2itc5w" path="res://Scenes/brick.tscn" id="6_ee645"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6nve"]
size = Vector2(20, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_soxyr"]
size = Vector2(720, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5te21"]
size = Vector2(20, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6kfr"]
size = Vector2(720, 19)

[node name="Main" type="Node2D"]
script = ExtResource("1_iqk4o")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 5.0
offset_top = 4.0
offset_right = 175.0
offset_bottom = 31.0

[node name="Life1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_rrchu")
expand_mode = 3

[node name="Life2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_rrchu")
expand_mode = 3

[node name="Life3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_rrchu")
expand_mode = 3

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(-10, 640)
shape = SubResource("RectangleShape2D_l6nve")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(360, -10)
shape = SubResource("RectangleShape2D_soxyr")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(730, 640)
shape = SubResource("RectangleShape2D_5te21")

[node name="Paddle" parent="." instance=ExtResource("1_ifoo7")]
position = Vector2(360, 1260)

[node name="BallKiller" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallKiller"]
position = Vector2(360, 1290)
shape = SubResource("RectangleShape2D_p6kfr")

[node name="Balls" type="Node2D" parent="."]

[node name="Ball" parent="Balls" instance=ExtResource("2_q414a")]
position = Vector2(360, 1231)

[node name="PowerUps" type="Node2D" parent="."]

[node name="TriBall" type="Node2D" parent="PowerUps"]

[node name="tri_ball_pwr" parent="PowerUps/TriBall" instance=ExtResource("5_bfu2y")]
position = Vector2(371, 419)

[node name="Bricks" type="Node2D" parent="."]

[node name="Brick" parent="Bricks" instance=ExtResource("6_ee645")]
position = Vector2(218, 419)

[connection signal="body_entered" from="BallKiller" to="." method="_on_ball_killer_body_entered"]
